[gd_scene load_steps=3 format=3 uid="uid://d2hdsg773xt1q"]

[ext_resource type="Script" path="res://game/ui/menu/main_menu/scripts/options.gd" id="1_ckcss"]
[ext_resource type="Theme" uid="uid://drcktdaf0fedg" path="res://game/ui/default_theme.tres" id="1_g0j2y"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckcss")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_g0j2y")

[node name="controls" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CONTROLS"

[node name="audio" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "AUDIO"

[node name="back" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="CenterContainer/VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
